--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     //Splash Screen
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 
+    //DataStore
+    implementation('androidx.datastore:datastore-preferences:1.0.0')
 }
