--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
 
     implementation "androidx.fragment:fragment-ktx:1.5.0"
+
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
