--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,11 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.5.0"
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    //Room
+    def roomVersion = '2.4.1'
+
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
 }
